--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "pg": "^7.4.1",
-    "react": "^16.2.0",
+    "react": "^16.4.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
